[package]
name = "aef"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "An encrypted file archiver"
homepage = "https://github.com/wyhaya/aef"
repository = "https://github.com/wyhaya/aef.git"
readme = "README.md"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
ring = "0.17.8"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
clap = { version = "4.5.16", features = ["derive"] }
rand = "0.8.5"
dialoguer = "0.11.0"
scrypt = "0.11.0"
walkdir = "2.5.0"
brotli = "6.0.0"
unic-normal = "0.9.0"
unic-ucd = "0.9.0"

[profile.dev.package.scrypt]
opt-level = 3